Fixed my page alignment

--- a/src/views/molecules/myPortfolio/myPortfolio.scss
+++ b/src/views/molecules/myPortfolio/myPortfolio.scss
@@ -8,8 +8,8 @@
 
   .avatar-wrapper {
     align-self: center;
-    max-width: 150px;
-    max-height: 150px;
+    max-width: 110px;
+    max-height: 110px;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -ms-transition: all 0.3s;
